# bfs_bench

./: Cargo.toml  README.md  flake.nix  plot.py  requirements.txt  results.csv
result/: new.csv  results_full_bfs.csv
src/: adaptive_node_set.rs  block_bitset.rs  bloom.rs  main.rs  mmap_bitset.rs  sparse_radix_set.rs  sparse_set.rs
