[package]
name = "bfs_bench"
version = "0.1.0"
edition = "2024"

[dependencies]
webgraph = {git="https://github.com/vigna/webgraph-rs.git"}
roaring = "0.10.10"
sux = "0.5.0"
anyhow = "1.0.96"
fxhash = "0.2.1"
ahash = "0.8.11"
wyhash = "0.6.0"
rapidhash = "1.4.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
foldhash = "0.2"
rustc-hash = "2.1"
nohash-hasher = "0.2"
croaring = "2.6"
gxhash = { version = "3.5", optional = true }

[features]
gxhash = ["dep:gxhash"]
